[gd_scene load_steps=24 format=3 uid="uid://c3fk5f6o5vtr7"]

[ext_resource type="Script" uid="uid://c4823xxpi80bs" path="res://src/screens/cah/game_screen/game_screen.gd" id="1_qaexu"]
[ext_resource type="PackedScene" uid="uid://xsivno8npp4i" path="res://src/card_ui/card_scroller/card_scroller.tscn" id="2_3ulvs"]
[ext_resource type="Theme" uid="uid://sfftfr7d567s" path="res://assets/resources/themes/theme_cards.tres" id="2_noo7h"]
[ext_resource type="Script" uid="uid://bij5ja7dxuyh" path="res://src/screens/cah/game_screen/top_label.gd" id="3_lfrdv"]
[ext_resource type="PackedScene" uid="uid://ct0o4u7jepmja" path="res://src/ui_elements/pulse_button/Pulse_button.tscn" id="3_qrh6e"]
[ext_resource type="PackedScene" uid="uid://ch8liwgnieqw7" path="res://src/card_ui/card_slot/card_slot.tscn" id="4_drf4n"]
[ext_resource type="Script" uid="uid://jok1u3fl30wj" path="res://src/screens/cah/game_screen/split_container.gd" id="4_pnpbp"]
[ext_resource type="PackedScene" uid="uid://d33ravlxtvbru" path="res://src/card_ui/card_group/card_group.tscn" id="5_oc45t"]
[ext_resource type="Script" uid="uid://df5dlokrsx6ah" path="res://src/screens/cah/game_screen/scroller_split.gd" id="7_epe2y"]
[ext_resource type="Script" uid="uid://cy0ft1rbxjbs3" path="res://src/screens/cah/game_screen/bb_control.gd" id="8_pnpbp"]
[ext_resource type="Texture2D" uid="uid://dms4mpfwrvcps" path="res://assets/images/particles/sqr.png" id="10_lfrdv"]
[ext_resource type="Script" uid="uid://of1q8s48itpc" path="res://src/screens/cah/game_screen/connecting_panel.gd" id="11_1mmlo"]
[ext_resource type="Script" uid="uid://cgputfm08k270" path="res://src/screens/cah/game_screen/client.gd" id="12_0461g"]
[ext_resource type="PackedScene" uid="uid://wqg1ulep46fv" path="res://src/screens/cah/chat/chat.tscn" id="12_dlfji"]
[ext_resource type="Texture2D" uid="uid://br0d5b18rlha4" path="res://assets/images/ui/menuList.png" id="13_tpuab"]
[ext_resource type="Texture2D" uid="uid://btot01ow8qsw8" path="res://assets/images/ui/return.png" id="14_avejo"]
[ext_resource type="PackedScene" uid="uid://bl3ii81dfb0j" path="res://src/screens/cah/confirm_panel/confirm_panel.tscn" id="18_acp4u"]
[ext_resource type="Texture2D" uid="uid://b4p14y2p8a1gl" path="res://assets/images/ui/exit.png" id="21_7n8ay"]
[ext_resource type="Texture2D" uid="uid://dxshxsxjqnn1q" path="res://assets/images/ui/massiveMultiplayer.png" id="21_mqnxu"]

[sub_resource type="Gradient" id="Gradient_lfrdv"]
interpolation_mode = 2
interpolation_color_space = 2
offsets = PackedFloat32Array(0, 0.6, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)
metadata/_snap_enabled = true
metadata/_snap_count = 5

[sub_resource type="Gradient" id="Gradient_1mmlo"]
interpolation_mode = 2
interpolation_color_space = 2
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0.95, 0.728333, 0.285, 1, 1, 0.44, 0.645333, 1, 0.666667, 0.6, 1, 1)
metadata/_snap_count = 2
metadata/_snap_enabled = true

[sub_resource type="Curve" id="Curve_lfrdv"]
_limits = [-1.0, 1.0, 0.0, 1.0]
_data = [Vector2(0, 0.483146), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mqnxu"]
bg_color = Color(0.823529, 0.0588235, 0.223529, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="GameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_qaexu")
metadata/_custom_type_script = "uid://i24r776wg103"

[node name="Game" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Game"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 2

[node name="LabelControl" type="Control" parent="Game/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 68)
layout_mode = 2

[node name="TopLabel" type="RichTextLabel" parent="Game/VBoxContainer/LabelControl"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(510, 68)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -255.0
offset_right = 255.0
offset_bottom = 68.0
grow_horizontal = 2
size_flags_horizontal = 4
theme = ExtResource("2_noo7h")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 40
text = "Placeholder text"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_lfrdv")

[node name="VSplitContainer" type="VSplitContainer" parent="Game/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/autohide = 0
split_offset = 3000
script = ExtResource("4_pnpbp")

[node name="CenterControl" type="Control" parent="Game/VBoxContainer/VSplitContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
mouse_filter = 1

[node name="CentralCardContainer" type="HBoxContainer" parent="Game/VBoxContainer/VSplitContainer/CenterControl"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 3
alignment = 1

[node name="LeftCardSlot" parent="Game/VBoxContainer/VSplitContainer/CenterControl/CentralCardContainer" instance=ExtResource("4_drf4n")]
unique_name_in_owner = true
layout_mode = 2

[node name="RightCardSlot" parent="Game/VBoxContainer/VSplitContainer/CenterControl/CentralCardContainer" instance=ExtResource("4_drf4n")]
unique_name_in_owner = true
layout_mode = 2

[node name="WhiteCardHolder" parent="Game/VBoxContainer/VSplitContainer/CenterControl/CentralCardContainer/RightCardSlot" instance=ExtResource("5_oc45t")]
unique_name_in_owner = true
layout_mode = 2
draggable = false

[node name="CenterCardSlot" parent="Game/VBoxContainer/VSplitContainer/CenterControl" instance=ExtResource("4_drf4n")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ReferenceRect" type="ReferenceRect" parent="Game/VBoxContainer/VSplitContainer/CenterControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
border_color = Color(0.0943737, 0.615227, 0.571761, 1)
border_width = 3.0

[node name="ScrollerSplit" type="VSplitContainer" parent="Game/VBoxContainer/VSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
split_offset = 125
dragging_enabled = false
dragger_visibility = 2
script = ExtResource("7_epe2y")

[node name="JudgeScroller" parent="Game/VBoxContainer/VSplitContainer/ScrollerSplit" instance=ExtResource("2_3ulvs")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="CardScroller" parent="Game/VBoxContainer/VSplitContainer/ScrollerSplit" instance=ExtResource("2_3ulvs")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="BBControl" type="Control" parent="Game/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 52)
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("8_pnpbp")

[node name="BottomButton" parent="Game/VBoxContainer/BBControl" instance=ExtResource("3_qrh6e")]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(360, 32)
layout_mode = 1
offset_left = -180.0
offset_top = -26.0
offset_right = 180.0
offset_bottom = 26.0
pivot_offset = Vector2(180, 26)
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
text = "Confirmar"
expand_icon = true
is_toggleable = false
is_toggled = false

[node name="ParticlesAnchor" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 8.0
offset_right = 8.0
grow_horizontal = 2
grow_vertical = 0

[node name="Confetti" type="CPUParticles2D" parent="ParticlesAnchor"]
unique_name_in_owner = true
z_index = 1
z_as_relative = false
emitting = false
amount = 150
texture = ExtResource("10_lfrdv")
lifetime = 12.0
one_shot = true
explosiveness = 0.97
randomness = 1.0
lifetime_randomness = 0.3
local_coords = true
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2(0, -1)
spread = 30.0
gravity = Vector2(0, 100)
initial_velocity_min = 250.0
initial_velocity_max = 550.0
angular_velocity_min = -109.83
angular_velocity_max = 85.42
damping_min = 75.0
damping_max = 95.0
angle_min = -80.0
angle_max = 80.0
scale_amount_max = 1.5
color_ramp = SubResource("Gradient_lfrdv")
color_initial_ramp = SubResource("Gradient_1mmlo")
hue_variation_min = -0.25
hue_variation_max = 0.25
hue_variation_curve = SubResource("Curve_lfrdv")

[node name="Chat" parent="." instance=ExtResource("12_dlfji")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="ChatButtonsMargin" type="MarginContainer" parent="Chat"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Control" type="Control" parent="Chat/ChatButtonsMargin"]
layout_mode = 2
mouse_filter = 2

[node name="ChatButtonsContainer" type="HBoxContainer" parent="Chat/ChatButtonsMargin/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -130.0
offset_bottom = 60.0
grow_horizontal = 0
theme_override_constants/separation = 10

[node name="PlayerListButton" parent="Chat/ChatButtonsMargin/Control/ChatButtonsContainer" instance=ExtResource("3_qrh6e")]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
is_toggled = false
texture_on = ExtResource("13_tpuab")
texture_off = ExtResource("13_tpuab")

[node name="ResetCardsButton" parent="Chat/ChatButtonsMargin/Control/ChatButtonsContainer" instance=ExtResource("3_qrh6e")]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
is_toggleable = false
is_toggled = false
texture_on = ExtResource("14_avejo")
texture_off = ExtResource("14_avejo")

[node name="Space" type="Control" parent="Chat/ChatButtonsMargin/Control/ChatButtonsContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
mouse_filter = 2

[node name="Space2" type="Control" parent="Chat/ChatButtonsMargin/Control/ChatButtonsContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
mouse_filter = 2

[node name="ConnectingPanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11_1mmlo")

[node name="ConnectingLabel" type="Label" parent="ConnectingPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.5
offset_top = -28.0
offset_right = 153.5
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_noo7h")
text = "Conectando..."

[node name="ButtonsMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Control" type="Control" parent="ButtonsMargin"]
layout_mode = 2
mouse_filter = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="ButtonsMargin/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -130.0
offset_bottom = 60.0
grow_horizontal = 0
theme_override_constants/separation = 10

[node name="ChatButton" parent="ButtonsMargin/Control/ButtonsContainer" instance=ExtResource("3_qrh6e")]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
is_toggled = false
texture_on = ExtResource("21_mqnxu")
texture_off = ExtResource("21_mqnxu")

[node name="NotifyBall" type="Panel" parent="ButtonsMargin/Control/ButtonsContainer/ChatButton"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -20.0
offset_bottom = 20.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_mqnxu")

[node name="ExitButton" parent="ButtonsMargin/Control/ButtonsContainer" instance=ExtResource("3_qrh6e")]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
is_toggleable = false
is_toggled = false
texture_on = ExtResource("21_7n8ay")
texture_off = ExtResource("21_7n8ay")

[node name="ConfirmPanel" parent="." instance=ExtResource("18_acp4u")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="Client" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("12_0461g")

[connection signal="drag_ended" from="Game/VBoxContainer/VSplitContainer" to="Game/VBoxContainer/VSplitContainer" method="_on_drag_ended"]
[connection signal="resized" from="Game/VBoxContainer/VSplitContainer/ScrollerSplit" to="Game/VBoxContainer/VSplitContainer/ScrollerSplit" method="update_offset"]
[connection signal="message_sent" from="Chat" to="Client" method="_on_message_sent"]
[connection signal="pressed" from="Chat/ChatButtonsMargin/Control/ChatButtonsContainer/ResetCardsButton" to="Client" method="_on_reset_cards_button_pressed"]
[connection signal="pulse_toggled" from="ButtonsMargin/Control/ButtonsContainer/ChatButton" to="." method="_on_chat_button_toggled"]
[connection signal="pressed" from="ButtonsMargin/Control/ButtonsContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="cancel_pressed" from="ConfirmPanel" to="." method="_on_confirm_panel_cancel_pressed"]
[connection signal="disconnected" from="Client" to="." method="exit_game"]
[connection signal="state_updated" from="Client" to="." method="_on_client_state_updated"]
